--- a/Web/js/bases/stars/stars.css
+++ b/Web/js/bases/stars/stars.css
@@ -1,6 +1,6 @@
 /************************************************************************************/
 /*																					*/
-/*					File : coder.js													*/
+/*					File : stars.css												*/
 /*						Created by Mathias CABIOCH-DELALANDE						*/
 /*							Last modification : 21/04/2018							*/
 /*																					*/
@@ -8,12 +8,7 @@
 /*																					*/
 /************************************************************************************/
 
-'use strict';
-
-function html_encode(str) {
-    return String(str).replace(/&amp;/g, '&').replace(/&lt;/g, '<').replace(/&gt;/g, '>').replace(/&quot;/g, '"');
-}
-
-function html_decode(str) {
-    return String(str).replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/"/g, '&quot;');
+.starChoice {
+	height: 40px;
+	width: auto;
 }
