--- a/Web/design/css/colors.less
+++ b/Web/design/css/colors.less
@@ -11,3 +11,10 @@
 
 @title-color1: @color4;
 @title-color2: @color5;
+
+@blue1: #1C41A6;
+@blue2: #0E2153;
+@blue3: #0E2153;
+@white: #FFFFFF;
+@black: #000000;
+@navbar:linear-gradient(@blue1, @blue2);
