--- a/Web/design/css/fonts.less
+++ b/Web/design/css/fonts.less
@@ -15,15 +15,15 @@
 }
 .font(@font, @size){
 	.font-family(@font);
-	
+
 	font-size: @size;
 }
 
 @font-face {
-	font-family: '';
-	
-	.src('@{font-path}/');
-	
+	font-family: 'cheeseburger';
+
+	.src('@{font-path}/cheeseborger');
+
 	font-weight: normal;
 	font-style: normal;
 }
