Mise a jour web

--- a/Web/design/css/colors.less
+++ b/Web/design/css/colors.less
@@ -16,5 +16,12 @@
 @blue2: #0E2153;
 @blue3: #0E2153;
 @white: #FFFFFF;
-@black: #000000;
+@white2: rgba(255,255,255,0.05);
+@black1: #000000;
+@black2: rgba(0,0,0,0.3);
+@black3: rgba(0,0,0,0.8);
+@vert1: #0B6F00;
+@vert2: #063800;
 @navbar:linear-gradient(@blue1, @blue2);
+@boutonvert1:linear-gradient(@vert1, @vert2);
+@boutonvert2:linear-gradient(@vert2, @vert1);
