mise a jour web

--- a/Web/design/css/colors.less
+++ b/Web/design/css/colors.less
@@ -15,8 +15,11 @@
 @blue1: #1C41A6;
 @blue2: #0E2153;
 @blue3: #0E2153;
-@white: #FFFFFF;
+@white1: #FFFFFF;
 @white2: rgba(255,255,255,0.05);
+@white3: rgba(255,255,255,0.5);
+@white4: rgba(255,255,255,0.25);
+@white5: rgba(255,255,255,0.40);
 @black1: #000000;
 @black2: rgba(0,0,0,0.3);
 @black3: rgba(0,0,0,0.8);
