--- a/Web/design/css/style.less
+++ b/Web/design/css/style.less
@@ -47,7 +47,7 @@ html {
 						display: block;
     				text-align: center;
 						text-decoration: none;
-						color: @white;
+						color: @white1;
 						font-size:1.5em;
 						padding:0.5em;
 						&:hover{
@@ -87,7 +87,7 @@ html {
 
 				div{
 					box-sizing: border-box;
-					color: @white;
+					color: @white1;
 					width: 60%;
 					float: left;
 
@@ -131,7 +131,7 @@ html {
 				border-radius: 10px;
 				border-color: @black1;
 				font-size: 1.4em;
-				color:@white;
+				color:@white1;
 				text-align: center;
 				background-color: @white2;
 
@@ -162,11 +162,12 @@ html {
 				}
 
 				input.boutonvert{
-					color: @white;
+					color: @white1;
 					margin-bottom: 0.5%;
 					border-color: @black1;
 					cursor: pointer;
 					background-image: @boutonvert1;
+
 					&:hover {
   					box-shadow: -2.5px 2px 8px 8px @black2;
 
@@ -176,8 +177,36 @@ html {
 					}
 				}
 				a{
-					color: @white;
+
+					color: @white1;
 					font-size: 0.5em;
+				}
+			}
+			div.palmares{
+				width: 88%;
+				margin-top: 1%;
+				margin-left: auto;
+				margin-right: auto;
+				table {
+					text-align: center;
+    			border-collapse: collapse;
+    			width: 100%;
+					border-style:solid;
+					border-radius:5px;
+					border-width:2px;
+					background-color:@white3;
+					th{
+					    padding: 8px;
+							color:@white1;
+							border-width: 1px;
+							border-style:solid;
+							border-color:@black1;
+					}
+					td{
+						&:
+						border-style:solid;
+						border-width: 1px;
+					}
 				}
 			}
 		}
@@ -186,7 +215,7 @@ html {
 			border-style: solid;
 			border-width: 2px 0px 0px 0px;
 			text-align: right;
-			background-color: @white;
+			background-color: @white1;
 			a{
 				color:@black1;
 				padding-right:2%;
@@ -196,12 +225,11 @@ html {
 			.copyright{
 				display: inline-block;
 				width: auto;
-				background-color: @white;
+				background-color: @white1;
 				color:@black1;
 				font-size:1.2em;
 				padding-right: 2%;
 			}
-
 		}
 	}
 }
