--- a/Web/design/css/style.less
+++ b/Web/design/css/style.less
@@ -107,7 +107,7 @@ html {
 			}
 		}
 		main {
-			div.presentation{
+			div#presentation{
 				margin: 5%;
 				margin-top: 2%;
 				box-shadow: 2.5px 2px 0px @black2;
@@ -157,7 +157,10 @@ html {
 					}
 				}
 			}
-			div.formulaireConnexion{
+			div#accueilPerso{
+				 display:none;
+			}
+			div.formulaire{
 				margin-top: 7%;
 				margin-left: auto;
     		margin-right: auto;
@@ -171,6 +174,11 @@ html {
 				color:@white1;
 				text-align: center;
 				background-color: @white2;
+
+				img{
+					width:5em;
+					height:auto;
+				}
 
 				h1{
 					font-size: 2.2em;
