mise a jour web

--- a/Web/design/css/colors.less
+++ b/Web/design/css/colors.less
@@ -23,8 +23,13 @@
 @black1: #000000;
 @black2: rgba(0,0,0,0.3);
 @black3: rgba(0,0,0,0.8);
+@gray: #707070;
+@gray2:#575757;
+@gray3:#1E1E1E;
 @vert1: #0B6F00;
 @vert2: #063800;
 @navbar:linear-gradient(@blue1, @blue2);
 @boutonvert1:linear-gradient(@vert1, @vert2);
 @boutonvert2:linear-gradient(@vert2, @vert1);
+@boutongris1:linear-gradient(@gray2, @gray3);
+@boutongris2:linear-gradient(@gray3, @gray2);
