--- a/Web/design/css/style.less
+++ b/Web/design/css/style.less
@@ -80,7 +80,7 @@ html {
 							top:4px;
 							left:-40px;
 							height: 1.8em;
-							width: auto;
+							width: 1.8em;
 						}
 					}
 					li.deconnexion{
@@ -95,7 +95,7 @@ html {
 							left:50%;
 							transform: translateX(-50%);
 							width: 1.8em;
-							height: auto;
+							height: 1.8em;
 						}
 						span{
 							padding:0.5em;
@@ -131,7 +131,7 @@ html {
 					&:first-child{
 						width: 40%;
 						float: left;
-						padding: 2em;
+						padding: 1em;
 						box-sizing: border-box;
 					}
 					img{
@@ -148,40 +148,38 @@ html {
 						width: 88%;
 						padding: 1em;
 						padding-top:2em;
+						padding-bottom: 0.5em;
 						text-align: center;
 						.font('cheeseburger',1.5em);
 					}
 					p{
-						.font('cheeseburger',1.2em);
+						.font('Arial',1.5em);
 						padding: 1em;
 					}
 				}
 			}
+
 			div#accueilPerso{
 				 display:none;
 			}
-			div.formulaire{
-				margin-top: 7%;
+
+			div#formulaireConnexion{
+				margin-top: 10%;
 				margin-left: auto;
     		margin-right: auto;
-				max-width: 550px;
-				padding-bottom: 3%;
+				max-width: 400px;
+				padding-bottom: 1%;
 				border-style: solid;
 				border-width:1px;
 				border-radius: 10px;
 				border-color: @black1;
-				font-size: 1.4em;
+				font-size: 1.3em;
 				color:@white1;
 				text-align: center;
 				background-color: @white2;
 
-				img{
-					width:5em;
-					height:auto;
-				}
-
 				h1{
-					font-size: 2.2em;
+					.font('cheeseburger',1.3em);
 					background: @navbar;
 					border-style: solid;
 					border-color: @black1;
@@ -199,7 +197,7 @@ html {
 				input{
 					padding: 6px 10px;
 					color: @black3;
-					font-size:0.8em;
+					font-size:0.7em;
 					border-style: solid;
 					border-color: @black2;
 					border-width:1px;
@@ -207,6 +205,9 @@ html {
 				}
 
 				input.boutonvert{
+					display:block;
+					margin-left:19%;
+					text-align: center;
 					color: @white1;
 					margin-bottom: 0.5%;
 					border-color: @black1;
@@ -222,22 +223,114 @@ html {
 					}
 				}
 				a{
-
 					color: @white1;
 					font-size: 0.5em;
 				}
 			}
-			div.palmares{
+
+			div#formulaireInscription{
+				margin-top: 3%;
+				margin-left: auto;
+				margin-right: auto;
+				margin-bottom: 3%;
+				max-width: 500px;
+				padding-bottom: 1%;
+				border-style: solid;
+				border-width:1px;
+				border-radius: 10px;
+				border-color: @black1;
+				font-size: 1.4em;
+				color:@white1;
+				text-align: center;
+				background-color: @white2;
+
+				h1{
+					.font('cheeseburger',1.3em);
+					background: @navbar;
+					border-style: solid;
+					border-color: @black1;
+					border-width: 0 0 1px 0;
+					border-radius: 9px 9px 0 0;
+				}
+				div:first-child{
+					margin-top: 2%;
+				}
+				div{
+					display: block;
+					margin-right:15%;
+					margin-left:5%;
+					text-align: right;
+					padding: 15px;
+					font-size: 0.7em;
+				}
+
+				input{
+					padding: 6px 10px;
+					color: @black3;
+					font-size:0.8em;
+					border-style: solid;
+					border-color: @black2;
+					border-width:1px;
+					border-radius:5px;
+				}
+
+				input.boutonvert{
+					margin-top: 10px;
+					display:block;
+					margin-left:40%;
+					text-align: center;
+					color: @white1;
+					margin-bottom: 0.1%;
+					border-color: @black1;
+					cursor: pointer;
+					background-image: @boutonvert1;
+
+					&:hover {
+						box-shadow: -2.5px 2px 8px 8px @black2;
+
+						}
+					&:active{
+						background-image: @boutonvert2;
+					}
+				}
+				div#blockAvatar{
+				padding: 0;
+				margin:0;
+				img{
+					margin-left:25%;
+						width:5em;
+						height:5em;
+						float: left;
+				}
+
+				div{
+					margin-top:20px;
+					margin-left:50px;
+					#boutonAvatar{
+						display:none;
+					}
+					#boutonAvatar2{
+						padding:10px;
+						margin-top: 1%;
+						margin-right: 1%;
+					}
+				}
+				}
+			}
+
+			div#palmares{
 				width: 88%;
 				margin-top: 2%;
 				margin-left: auto;
 				margin-right: auto;
 				color:@white1;
+
 				h1{
 					text-align: center;
 					.font('cheeseburger',3em);
 				}
 				table {
+					margin-top: -1px;
 					text-align: center;
 					background-color:@white3;
 					border-radius:0 5px 5px;
@@ -245,16 +338,37 @@ html {
 					border-spacing:0;
     			width: 100%;
 					th{
-					    padding: 8px;
+					    padding: 10px;
 							border: 1px solid @black1;
+							font-size: 1.3em;
 					}
 					tbody{
 						td{
-							border-spacing:-1px;
+							padding: 7px;
 							border: 1px solid @black1;
 						}
 					}
 				}
+				div{
+				margin-top:20px;
+				margin-left: 5px;
+				button{
+					font-size: 1.2em;
+					color: @white1;
+					margin-left: -5px;
+					border: 4px solid @black1;
+					border-width:2px;
+					border-radius: 0 10px 0 0;
+					padding: 5px 40px 5px 40px;
+					background-color:@gray;
+					&:hover {
+  					box-shadow: -2.5px 2px 8px 8px @black3;
+						}
+					&:active{
+						background-color:@black2;
+					}
+				}
+			}
 			}
 		}
 
