mise a jour web

--- a/Web/design/css/colors.less
+++ b/Web/design/css/colors.less
@@ -31,6 +31,7 @@
 @vert2: #063800;
 @rouge1: #931009;
 @rouge2: #4A0505;
+@chrono:#3E4D5F;
 @navbar:linear-gradient(@blue1, @blue2);
 @boutonvert1:linear-gradient(@vert1, @vert2);
 @boutonvert2:linear-gradient(@vert2, @vert1);
@@ -38,3 +39,5 @@
 @boutongris2:linear-gradient(@gray3, @gray2);
 @boutonrouge1:linear-gradient(@rouge1, @rouge2);
 @boutonrouge2:linear-gradient(@rouge2, @rouge1);
+@imagemodifier1:linear-gradient(to bottom,rgba(0,0,0,0) 65%,rgba(0,0,0,0.8) 65%);
+@imagemodifier2:linear-gradient(to bottom,rgba(0,0,0,0.1) 65%,rgba(0,0,0,0.9) 65%);
